# Natural Disaster Distance Monitor - Rust Implementation
# Status: PLANNED (not yet implemented)

[package]
name = "disaster-monitor"
version = "0.1.0"
edition = "2021"
description = "CLI tool to find natural disasters near a location"
authors = ["Your Name"]
license = "MIT"

[dependencies]
# HTTP client (async)
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# CSV parsing
csv = "1.3"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
# Testing
tokio-test = "0.4"

[[bin]]
name = "disaster-monitor"
path = "src/main.rs"

